# hipo-wallet

./: .gitignore  README.md  _CoqProject  deploy.sh  dune-project  ton-hipo-wallet.opam
ref/eb839658c954c485060bd8d9cf838bbe93f18f75/: wallet.fc
spec/: BaseScenario.drawio  Bounce.drawio  BounceMigrate.drawio  BounceReceive.drawio  BounceReserve.drawio  Dispatch.drawio  Hipo.drawio  MergeWallet.drawio  ReceiveTokens.drawio  RollbackUnstake.drawio  SaveCoins.drawio  SendTokens.drawio  TokensBurned.drawio  TokensMinted.drawio  UnstakeAll.drawio  UnstakeTokens.drawio  UpgradeWallet.drawio  spec-template.drawio
src/: Common.v  CommonQC.v  ExampleProp.v  HipoWallet.v  Run.v  dune
src/Props/: Props.v
