synopsis:     "ton-hipo-wallet"
description:  "ton-hipo-wallet"
name:         "ton-hipo-wallet"
opam-version: "2.0"
maintainer:   "team@pruvendo.com"
authors:      "Pruvendo Team"
homepage:     "git://git@vcs.modus-ponens.com/ton/wallet-spec.git"
dev-repo:     "git+https://github.com/Pruvendo/opam-repo.git"
bug-reports:  "git://git@vcs.modus-ponens.com:ton/wallet-spec.git"
doc:          "https://vcs.modus-ponens.com/ton/wallet-spec.git"

license:      "GPL-3.0-or-later"

depends: [
  "coq"           { >= "8.16.0" }
  "dune"          { >= "2.8.0"  }
]
build: [ "dune" "build" "-p" name "-j" jobs ]
